--- a/style.css
+++ b/style.css
@@ -240,3 +240,14 @@ body {
   }
 
   /* section Restaurants */
+
+  .karrusellrest {
+    width: 100%;
+    height: 55%;
+    background-image: url(./assets/karrusellrest.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+  }
