--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ body {
     background-image: url(./assets/locationbackground.svg);
     background-repeat: no-repeat;
     background-size: contain;
-    width: 699px;
+    width: 70%;
     height: 108px;
     position: absolute;
     top: 0;
@@ -88,6 +88,7 @@ body {
   font-family: var(--fontlead);
   font-size: var(--pplus);
   text-transform: uppercase;
+  margin: 0;
 }
 
 .loctext {
@@ -95,6 +96,7 @@ body {
   font-family: var(--fontlead);
   font-size: var(--leadtext);
   text-transform: uppercase;  
+  margin: 0;
 }
 
 .leadp {
@@ -243,11 +245,31 @@ body {
 
   .karrusellrest {
     width: 100%;
-    height: 55%;
+    height: 60%;
     background-image: url(./assets/karrusellrest.svg);
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: auto;
     position: absolute;
     bottom: 0;
     left: 0;
+  }
+
+  /* section Sportgeschäfte und Kurse */
+
+  .skimgbox{
+    width: 100%;
+    height: 20rem;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-around;
+    position: absolute;
+    bottom: 0.5rem;
+    left: 0;
+
+  }
+
+  .skimgcont {
+    width: 25rem;
+    height: 20rem;
+    background-color: var(--secondary);
   }
