--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
   font-family: 'Roboto Condensed', sans-serif;
 
   /* Farben */
-  --primary: #DA001C;
+  --primary: #FF0021;
   --primaryDark: #DA001C;
   --secondary: #E4E8EC;
   --textcolor: #2D343E;
@@ -29,7 +29,7 @@
   --mountainwidth: 10em;
   --locwidth: 45rem;
   --contentwidth: 1080px;
-  --formwidth: 950px;
+  --formwidth: 800px;
 }
 
 body {
@@ -194,7 +194,7 @@ img {
   .redCont {
     height: 100%;
     width: 10em;
-    background-color: var(--primary);
+    background-color: var(--primaryDark);
     display: flex;
     justify-content: center;
     align-items: end;
@@ -536,7 +536,69 @@ img {
     height: 40rem;
     background-color: var(--secondary);
     border-radius: 2rem;
-    position: absolute;
-    bottom: 1rem;
-    left: calc(100vw*0.5 - var(--formwidth)*0.5);
+    position: relative;
+    top: 7.5rem;
+    margin: 0 auto;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-items: end;
+    padding: 0 5rem 1.5rem 5rem;
   }
+
+  .selectcont {
+    display: flex;
+    flex-flow: column nowrap;
+    width: 100%;
+    margin: 0 auto;
+    margin-top: 2rem;
+  }
+
+  .selectcont select{
+    margin-top: 1rem;
+    height: 2.5rem;
+    width: 100%;
+  }
+
+  .inputcont {
+    width: 40%;
+    display: flex;
+    flex-flow: column nowrap;
+    font-family: var(--fontstandart);
+    font-size: var(--paragraph);
+  }
+
+  .inputcont input{
+    height: 1rem;
+    padding: 0.8rem;
+    width: 100%;
+  }
+
+  .textcont {
+    width: 75%;
+    display: flex;
+    flex-flow: column nowrap;
+  }
+
+ .textcont textarea{
+  width: 100%;
+  height: 300px;
+  resize: none;
+  padding: 1rem;
+  border-radius: 1rem;
+ }
+
+ .kontaktform button{
+  width: 8rem;
+  height: 2.5rem;
+  background-color: var(--primary);
+  border: none;
+  border-radius: 1.5rem;
+  color: var(--textwhite);
+  font-family: var(--fontlead);
+  font-size: var(--paragraph);
+ }
+
+ .kontaktform button:active{
+  background-color: var(--primaryDark);
+ }
