--- a/style.css
+++ b/style.css
@@ -74,11 +74,18 @@ img {
   font-family: var(--fontlead);
 }
 
+.imgfull {
+  position: absolute;
+  top: 0;
+  z-index: -1;
+}
+
 .sektion {
   width: 100%;
   height: 100vh;
   position: relative;
   margin-top: 0;
+  overflow: hidden;
 }
 
 .location {
@@ -435,6 +442,7 @@ img {
     height: 100%;
     margin: 0;
     background-color: #DA001C;
+    overflow: hidden;
   }
 
   .eventtextcont {
